# peer-review-service

./: .gitignore  .travis.yml  LICENSE  README.md  app.cfg.example  peer-review-service.cabal  stack.yaml
app/: Main.hs
database/: Dockerfile  schema.sql  setup.sql  wipe.sql
migrations/: 001_schema.sql
script/: build  run  run_db  setup  test
src/PeerReview/: API.hs  Config.hs  Core.hs  DBConnection.hs  Database.hs  ReviewFinder.hs  Server.hs  Transaction.hs  Types.hs  Util.hs
src/PeerReview/DataSource/: FPCourse.hs
src/PeerReview/ReviewRepo/: Postgres.hs  Transaction.hs
src/PeerReview/SubmissionRepo/: FPCourse.hs  FPCourseAPIClient.hs
src/PeerReview/TaskSource/: FPCourse.hs
src/PeerReview/Web/: API.hs  Routes.hs  Server.hs  Types.hs
test/PeerReview/: ConfigSpec.hs  ServerSpec.hs  UtilSpec.hs
test/PeerReview/DataSource/: Testing.hs
test/PeerReview/SubmissionRepo/: FPCourseMockAPIClient.hs  FPCourseSpec.hs  Testing.hs
test/PeerReview/TaskSource/: Testing.hs
test/PeerReview/Web/: ServerSpec.hs
test/fixtures/FPCourse/: all.json  sha1.json
test/fixtures/config/: fail.json  submission_repo.json  test.cfg
