name:                peer-review-service
version:             0.1.0.0
synopsis:            Web service for course peer reviews
description:         Please see README.md
homepage:            http://github.com/keveri/peer-review-service#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
copyright:           Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PeerReview.Server
                     , PeerReview.Types
                     , PeerReview.SubmissionRepo.FPCourse
                     , PeerReview.SubmissionRepo.FPCourseAPIClient
                     , PeerReview.ReviewRepo.Postgres
                     , PeerReview.Config
                     , PeerReview.Util
  other-modules:       PeerReview.API
                     , PeerReview.Core
                     , PeerReview.ReviewFinder
                     , PeerReview.ReviewRepo.Transaction
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , configurator >= 0.3
                     , containers >= 0.5
                     , wai-extra >= 3.0
                     , Spock >= 0.10
                     , postgresql-simple >= 0.4
                     , text >= 1.2
                     , transformers >= 0.4
                     , resource-pool >= 0.2
                     --, time >= 1.5
                     , aeson >= 0.8
                     , wreq >= 0.4
                     , lens >= 4.12
                     , vector >= 0.10
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable peer-review-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , peer-review-service
  default-language:    Haskell2010

test-suite peer-review-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PeerReview.ServerSpec
                     , PeerReview.SubmissionRepo.FPCourseSpec
                     , PeerReview.SubmissionRepo.FPCourseMockAPIClient
                     , PeerReview.SubmissionRepo.Testing
                     , PeerReview.UtilSpec
  build-depends:       base
                     , bytestring >= 0.10
                     , peer-review-service
                     , aeson
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , Spock
                     , wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keveri/peer-review-service
