name:                peer-review-service
version:             0.1.0.0
synopsis:            Web service for course peer reviews
description:         Please see README.md
homepage:            http://github.com/keveri/peer-review-service#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
copyright:           Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PeerReview.Config
                     , PeerReview.ReviewRepo.Postgres
                     , PeerReview.SubmissionRepo.FPCourse
                     , PeerReview.SubmissionRepo.FPCourseAPIClient
                     , PeerReview.Types
                     , PeerReview.Util
                     , PeerReview.Web.Server
                     , PeerReview.Web.Types
  other-modules:       PeerReview.Core
                     , PeerReview.ReviewFinder
                     , PeerReview.ReviewRepo.Transaction
                     , PeerReview.Web.API
                     , PeerReview.Web.Routes
  build-depends:       aeson >= 0.8
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , configurator >= 0.3
                     , containers >= 0.5
                     , http-types >= 0.8
                     , lens >= 4.12
                     , postgresql-simple >= 0.4
                     , resource-pool >= 0.2
                     , Spock >= 0.10
                     , text >= 1.2
                     , transformers >= 0.4
                     , vector >= 0.10
                     , wai-cors >= 0.2.3
                     , wai-extra >= 3.0
                     , wreq >= 0.4
  default-language:    Haskell2010

executable peer-review-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , peer-review-service
  default-language:    Haskell2010

test-suite peer-review-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PeerReview.ConfigSpec
                     , PeerReview.SubmissionRepo.FPCourseMockAPIClient
                     , PeerReview.SubmissionRepo.FPCourseSpec
                     , PeerReview.SubmissionRepo.Testing
                     , PeerReview.UtilSpec
                     , PeerReview.Web.ServerSpec
  build-depends:       aeson
                     , base
                     , bytestring
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , peer-review-service
                     , Spock
                     , wai
                     , wai-cors
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keveri/peer-review-service
